<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About this app</string>
    <string name="about_achart">AChart Engine, by SC 4ViewSoft SRL.</string>
    <string name="about_betterpickers">BetterPickers, by Derek Brameyer.</string>
    <string name="about_colorpicker">Color Picker Preference, by Sergey Margaritov and Daniel Nilsson.</string>
    <string name="about_developedby">2014 - José Luis Antúnez</string>
    <string name="about_license">This app is released under the terms of the GNU GPL v3 license.</string>
    <string name="about_photography">Photography: Albert Maurí</string>
    <string name="about_thirdparty">This license does not apply to the following third party libraries, released under the terms of the Apache License, v2.0.</string>
    <string name="about_urlimageviewhelper">URL ImageView Helper, by Koushik Dutta.</string>
    <string name="about_version">version 1.0</string>
    <string name="action_filters">Report Filters</string>
    <string name="action_newsession">New Session</string>
    <string name="action_reports">Reports</string>
    <string name="action_save">Save</string>
    <string name="action_setallto">Set all to…</string>
    <string name="action_settings">Settings</string>
    <string name="all_attcontrols">All AttControls</string>
    <string name="all_courses">All courses</string>
    <string name="all_groups">All groups</string>
    <string name="all_students">All users</string>
    <string name="all_students_from_group">All users from group</string>
    <string name="app_name">AttMobile</string>
    <string name="attcontrol">AttControl</string>
    <string name="attendance_notsaved">Attendance was not successfully saved.</string>
    <string name="attendance_saved">Attendance successfully saved.</string>
    <string name="atthome">AttHome</string>
    <string name="atthome_connection_error">There was a problem connecting to your atthome instances.</string>
    <string name="attmobile">AttMobile</string>
    <string name="color1_title">Color for status 1</string>
    <string name="color2_title">Color for status 2</string>
    <string name="color3_title">Color for status 3</string>
    <string name="color4_title">Color for status 4</string>
    <string name="color5_title">Color for status 5</string>
    <string name="color6_title">Color for status 6</string>
    <string name="color7_title">Color for status 7</string>
    <string name="color8_title">Color for status 8</string>
    <string name="colora_summary">Color for the attendance statuses acronyms.</string>
    <string name="colora_title">Acronym Color</string>
    <string name="common_session">Common session</string>
    <string name="commonreport">Common report</string>
    <string name="connection_error">There was a connection error. Please, check your connection data and try again.</string>
    <string name="course">Course</string>
    <string name="date">Session date and time</string>
    <string name="default_moodle">http://moodle.mindeos.net</string>
    <string name="default_password">teacher1</string>
    <string name="default_user">teacher1</string>
    <string name="deletesession">Delete this session</string>
    <string name="deletesuccessful">Session was deleted successfully</string>
    <string name="deleteunsuccessful">Session could not be deleted</string>
    <string name="description">Description</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="editsession">Edit this session</string>
    <string name="enddate">End date</string>
    <string name="enter_remarks">Enter your remarks</string>
    <string name="fromdate">From</string>
    <string name="group">Group</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="moodlesite">Moodle site address</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="no_reports_this_criteria">No reports were found matching the criteria selected.</string>
    <string name="noatthomes">The are no atthome instances for this user.</string>
    <string name="nosessionsdate">There are no sessions for this date</string>
    <string name="notused">Not used in this attcontrol instance</string>
    <string name="password">password</string>
    <string name="pick_color">Pick a color</string>
    <string name="pref_category">Application Colours</string>
    <string name="press_color_to_apply">Press on the color to apply</string>
    <string name="recurrence">Recurrence</string>
    <string name="recurrentsession">Recurrent session</string>
    <string name="remarks">Remarks</string>
    <string name="remember_me">Remember me</string>
    <string name="report_detail">Report Detail</string>
    <string name="report_settings">Report Settings</string>
    <string name="report_summary">Report Summary</string>
    <string name="select_attcontrol">Select an AttControl instance for this session</string>
    <string name="select_course">Select a course for this session</string>
    <string name="selectaction">Select an action</string>
    <string name="selectreportfilters">Touch the filter icon on the action bar to set the filters for this report.</string>
    <string name="sessionduration">Session duration</string>
    <string name="session_notrecurrent">NON recurrent session</string>
    <string name="session_recurrent">Recurrent session (press to see details)</string>
    <string name="sessionupdatesuccessful">Session updated successfully</string>
    <string name="settings">Settings</string>
    <string name="startdate">Start date</string>
    <string name="suredeletelong">Are you sure you want to delete this session and all its information?</string>
    <string name="title_activity_att_home">AttHome</string>
    <string name="title_activity_att_home_reports">AttHome Reports</string>
    <string name="title_activity_edit_session">Edit session</string>
    <string name="title_activity_new_session">Create New Session</string>
    <string name="title_activity_reports">AttControl Reports</string>
    <string name="title_activity_sessions">AttControl</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_takeattendance">Take Attendance</string>
    <string name="todate">To</string>
    <string name="user">Student</string>
    <string name="username">username</string>
    <string name="yes">Yes</string>
</resources>
