<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_category">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="colora"
            android:title="@string/colora_title"
            android:summary="@string/colora_summary"
            alphaSlider="true"
        />
		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:key="color1"
			android:title="@string/color1_title"
            android:summary="@string/notused"
            alphaSlider="true"
        />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color2"
            android:title="@string/color2_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color3"
            android:title="@string/color3_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color4"
            android:title="@string/color4_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color5"
            android:title="@string/color5_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color6"
            android:title="@string/color6_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color7"
            android:title="@string/color7_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color8"
            android:title="@string/color8_title"
            android:summary="@string/notused"
            alphaSlider="true"
            />

	</PreferenceCategory>
</PreferenceScreen>
